<resources>
    <string name="app_name">Fruit</string>
    <string name="action_settings">Settings</string>


    <string name="hello_world">用户请登录</string>
    <string name="username">账号:</string>
    <string name="password">密码:</string>
    <string name="Login">登录:</string>
    <string name="attempts">可登录次数:</string>
    <string name="testdb">测试数据库</string>

    <string name="tab_home">首页</string>
    <string name="tab_contact">商家通讯录</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_me">购物单</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="num">数量</string>
    <string name="price">价格</string>
    <string name="fruit">水果种类</string>
    <string name="sure">确认</string>
    <string name="drop">取消</string>
    <string name="reg">注册</string>>
    <string name="search_input">请输入商品名称或店铺名</string>


    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
</resources>
