<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/id_indicator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.naoh.Fruit.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="#ff45c01a"
            app:icon="@mipmap/guide_home_nm"
            app:text="@string/tab_home"
            app:text_size="@dimen/tab_text_size" />

        <com.naoh.Fruit.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="@color/tab_color"
            app:icon="@mipmap/guide_tfaccount_nm"
            app:text="@string/tab_contact"
            app:text_size="@dimen/tab_text_size" />

        <com.naoh.Fruit.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="@color/tab_color"
            app:icon="@mipmap/guide_cart_nm"
            app:text="@string/tab_cart"
            app:text_size="@dimen/tab_text_size" />

        <com.naoh.Fruit.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="@color/tab_color"
            app:icon="@mipmap/guide_account_nm"
            app:text="@string/tab_me"
            app:text_size="@dimen/tab_text_size" />
    </LinearLayout>
</LinearLayout>
