<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminActivity">


    <TextView
        android:id="@+id/textViewP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewP"
        android:layout_marginTop="50dp"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/textViewP"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewP"
        android:layout_below="@+id/textViewP"
        android:layout_marginTop="38dp"
        android:text="@string/num"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewN"
        android:layout_alignLeft="@+id/editTextP"
        android:ems="10"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/textViewF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewN"
        android:layout_below="@+id/textViewN"
        android:layout_marginTop="38dp"
        android:text="@string/fruit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewF"
        android:layout_alignLeft="@+id/editTextN"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextF"
        android:layout_marginTop="94dp"
        android:onClick="sure"
        android:text="@string/sure"
        android:layout_toRightOf="@+id/textViewF"
        android:layout_toEndOf="@+id/textViewF" />
    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextF"
        android:layout_alignLeft="@+id/buttonS"
        android:layout_marginTop="94dp"
        android:text="@string/drop"
        android:layout_alignRight="@+id/editTextF"
        android:layout_alignEnd="@+id/editTextF" />



</RelativeLayout>